# rust_snake

./: Cargo.toml  LICENSE  README.md
resources/: context.ron  display_config.ron  key_config.ron
resources/assets/: snake.ron  tileset.ron
resources/assets/ui/: game_over.ron
src/: graph_creator.rs  loader.rs  main.rs  resources.rs  states.rs  tilemap.rs  util.rs
src/assets/: context.rs  mod.rs  ttype.rs
src/components/: mod.rs  tilemap.rs
src/resources/: board.rs  context.rs  game.rs  getter.rs  message.rs  mod.rs
src/states/: loading.rs  main.rs  mainstate.rs  mod.rs
src/systems/: input.rs  mod.rs  snake.rs  tick.rs  tilemap.rs
