[package]
name = "r_snake"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = {version = "0.11.0", features = ["vulkan"]}
specs-derive = "0.4.0"
ron = "0.5.1"
serde = "1"
# shred = {version = "*", features = ["nightly"]}

[features]
# empty = ["amethyst/empty"]
# metal = ["amethyst/metal"]
# vulkan = ["amethyst/vulkan"]
