[package]
name = "r_snake"
version = "0.1.0"
authors = []
edition = "2018"

license = "MIT"

[dependencies]
amethyst = "0.11.0"
specs-derive = "0.4.0"
ron = "0.5.1"
serde = "1"
rand = "0.7"
# shred = {version = "*", features = ["nightly"]}

[features]
# empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
default = ["amethyst/vulkan"]